social media meta tags

--- a/index.html
+++ b/index.html
@@ -4,6 +4,30 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- ******** SOCIAL MEDIA META ********** -->
+
+    <meta
+      name="title"
+      property="og:title"
+      content="Dashboard Material UI web"
+    />
+    <meta property="og:type" content="website" />
+    <meta
+      name="image"
+      property="og:image"
+      content="https://user-images.githubusercontent.com/50924448/210395652-921c0178-5072-4127-873a-29ad9fd61b61.PNG"
+    />
+    <meta
+      name="description"
+      property="og:description"
+      content="Showcase of diferent components"
+    />
+    <meta
+      property="og:url"
+      content="https://juaamol.github.io/dashboard-material-ui/"
+    />
+
+    <!-- ************************************* -->
     <title>Dashboard material ui</title>
   </head>
   <body>
